--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\MenuScript.cs" />
      <Compile Include="Assets\Scripts\PlayerScript.cs" />
      <Compile Include="Assets\Scripts\StatManager.cs" />
+     <Compile Include="Assets\Timer.cs" />
  <Reference Include="Facebook.Unity.Settings">
  <HintPath>D:/GitHub/MDU112 Project 3/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
